--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -51,13 +51,13 @@ workflows:
         notify:
           success: true
           failure: true
-      app_store_connect:
-        api_key: $APP_STORE_CONNECT_PRIVATE_KEY
-        key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER  
-        issuer_id: $APP_STORE_CONNECT_ISSUER_ID
-        submit_to_testflight: false
-        beta_groups:
-          - App Store Connect Users
-      google_play:
-        credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
-        track: internal
+      # app_store_connect:
+        # api_key: $APP_STORE_CONNECT_PRIVATE_KEY
+        # key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER  
+        # issuer_id: $APP_STORE_CONNECT_ISSUER_ID
+        # submit_to_testflight: false
+        # beta_groups:
+          # - App Store Connect Users
+      # google_play:
+        # credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+        # track: internal
