--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -19,7 +19,7 @@ workflows:
           npm ci
       - name: Build web app
         script: |
-          npm run build
+          npx vite build
       - name: Update dependencies and build Capacitor iOS
         script: |
           npx cap sync ios
