--- a/build-android.yml
+++ b/build-android.yml
@@ -80,8 +80,40 @@ jobs:
           "kamsi_1757182966454.png"
           "generated_images/Nigerian_woman_professional_headshot_b062e128.png"
           "generated_images/Nigerian_man_professional_headshot_671c9909.png"
+          "generated_images/Nigerian_academic_woman_portrait_2110a518.png"
+          "generated_images/Nigerian_young_professional_headshot_5f929c22.png"
+          "generated_images/Nigerian_youth_civic_engagement_scene_024f101a.png"
+          "generated_images/Nigerian_youth_leadership_action_scene_a4fe4b9b.png"
+          "generated_images/Nigerian_executive_director_headshot_66d7aed0.png"
+          "generated_images/Nigerian_program_director_headshot_e243da1e.png"
+          "generated_images/Nigerian_tech_director_headshot_f21fc2b5.png"
+          "generated_images/Nigerian_community_relations_headshot_1fca20ac.png"
+          "generated_images/Ogun_farmers_cooperative_facility_c3448180.png"
+          "generated_images/Rivers_youth_skill_training_center_5a73d8af.png"
+          "generated_images/Lagos_clean_water_project_impact_a203262d.png"
+          "generated_images/Abuja_school_technology_lab_students_47624343.png"
+          "generated_images/Cross_River_road_construction_project_969e2349.png"
+          "generated_images/Kano_solar_health_clinic_installation_aa20defb.png"
           "generated_images/University_of_Ibadan_logo_b36b851a.png"
           "generated_images/UNILAG_university_logo_2f8621ab.png"
+          "generated_images/ABU_university_logo_dfea4cfe.png"
+          "generated_images/UNN_university_logo_f3e99836.png"
+          "generated_images/Covenant_University_logo_796d63b3.png"
+          "generated_images/OAU_university_logo_c5878c86.png"
+          "generated_images/UNILORIN_university_logo_110e2837.png"
+          "generated_images/FUTA_university_logo_0104532e.png"
+          "generated_images/BUK_university_logo_08e474bb.png"
+          "generated_images/UNIBEN_university_logo_c84ef7a6.png"
+          "generated_images/LASU_university_logo_16d6bf88.png"
+          "generated_images/UNIPORT_university_logo_e90409d0.png"
+          "generated_images/FUTMINNA_university_logo_28d3b1e7.png"
+          "generated_images/NAU_university_logo_fcccd8c1.png"
+          "generated_images/UNICAL_university_logo_71674d48.png"
+          "generated_images/UNIJOS_university_logo_929df0fc.png"
+          "generated_images/FUNAAB_university_logo_ae46856d.png"
+          "generated_images/UNIABUJA_university_logo_382b3f47.png"
+          "generated_images/RSU_university_logo_08c2005f.png"
+          "generated_images/AAUA_university_logo_92def4fc.png"
         )
         
         for asset in "${all_assets[@]}"; do
