--- a/build-android.yml
+++ b/build-android.yml
@@ -97,24 +97,38 @@ jobs:
           echo "Fixed client community-chat.tsx imports"
         fi
         
-        # Replace problematic asset imports in landing-comprehensive.tsx
-        if [ -f "client/src/pages/landing-comprehensive.tsx" ]; then
-          echo "Fixing asset imports in landing-comprehensive.tsx..."
-          # Replace asset imports with inline data URIs
-          sed -i 's|import youthEngagementImage from "@assets/generated_images/Nigerian_youth_civic_engagement_scene_024f101a.png";|const youthEngagementImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' client/src/pages/landing-comprehensive.tsx
-          sed -i 's|import youthLeadershipImage from "@assets/generated_images/Nigerian_youth_leadership_action_scene_a4fe4b9b.png";|const youthLeadershipImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' client/src/pages/landing-comprehensive.tsx
-          sed -i 's|import drRasheedImage from "@assets/generated_images/Nigerian_executive_director_headshot_66d7aed0.png";|const drRasheedImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' client/src/pages/landing-comprehensive.tsx
-          sed -i 's|import aishaImage from "@assets/generated_images/Nigerian_program_director_headshot_e243da1e.png";|const aishaImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' client/src/pages/landing-comprehensive.tsx
-          sed -i 's|import emmanuelImage from "@assets/generated_images/Nigerian_tech_director_headshot_f21fc2b5.png";|const emmanuelImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' client/src/pages/landing-comprehensive.tsx
-          sed -i 's|import sarahImage from "@assets/generated_images/Nigerian_community_relations_headshot_1fca20ac.png";|const sarahImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' client/src/pages/landing-comprehensive.tsx
-          echo "✅ Fixed landing-comprehensive.tsx asset imports"
-        fi
+        # Fix asset imports in ALL landing files (both src/ and client/src/ structures)
+        echo "Finding and fixing all problematic asset imports..."
         
-        # Also fix any other problematic asset imports
-        find client/src -name "*.tsx" -exec grep -l "@assets/generated_images" {} \; 2>/dev/null | while read file; do
+        # Find all files with problematic imports and fix them
+        find . -name "*.tsx" -type f -exec grep -l "@assets/generated_images" {} \; 2>/dev/null | while read file; do
           echo "Fixing asset imports in: $file"
-          sed -i 's|import .* from "@assets/generated_images/[^"]*";|const placeholderImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' "$file"
+          
+          # Replace specific problematic imports with data URIs
+          sed -i 's|import youthEngagementImage from "@assets/generated_images/Nigerian_youth_civic_engagement_scene_024f101a.png";|const youthEngagementImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' "$file"
+          sed -i 's|import youthLeadershipImage from "@assets/generated_images/Nigerian_youth_leadership_action_scene_a4fe4b9b.png";|const youthLeadershipImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' "$file"
+          sed -i 's|import drRasheedImage from "@assets/generated_images/Nigerian_executive_director_headshot_66d7aed0.png";|const drRasheedImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' "$file"
+          sed -i 's|import aishaImage from "@assets/generated_images/Nigerian_program_director_headshot_e243da1e.png";|const aishaImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' "$file"
+          sed -i 's|import emmanuelImage from "@assets/generated_images/Nigerian_tech_director_headshot_f21fc2b5.png";|const emmanuelImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' "$file"
+          sed -i 's|import sarahImage from "@assets/generated_images/Nigerian_community_relations_headshot_1fca20ac.png";|const sarahImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' "$file"
+          
+          # Replace any other @assets/generated_images imports
+          sed -i 's|import [a-zA-Z_][a-zA-Z0-9_]* from "@assets/generated_images/[^"]*";|const placeholderImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' "$file"
+          
+          echo "✅ Fixed asset imports in: $file"
         done
+        
+        # Also check if the build is using a different structure and fix the main problematic file directly
+        if [ -f "src/pages/landing-comprehensive.tsx" ]; then
+          echo "Fixing root src/pages/landing-comprehensive.tsx..."
+          sed -i 's|import youthEngagementImage from "@assets/generated_images/Nigerian_youth_civic_engagement_scene_024f101a.png";|const youthEngagementImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' src/pages/landing-comprehensive.tsx
+          sed -i 's|import youthLeadershipImage from "@assets/generated_images/Nigerian_youth_leadership_action_scene_a4fe4b9b.png";|const youthLeadershipImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' src/pages/landing-comprehensive.tsx
+          sed -i 's|import drRasheedImage from "@assets/generated_images/Nigerian_executive_director_headshot_66d7aed0.png";|const drRasheedImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' src/pages/landing-comprehensive.tsx
+          sed -i 's|import aishaImage from "@assets/generated_images/Nigerian_program_director_headshot_e243da1e.png";|const aishaImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' src/pages/landing-comprehensive.tsx
+          sed -i 's|import emmanuelImage from "@assets/generated_images/Nigerian_tech_director_headshot_f21fc2b5.png";|const emmanuelImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' src/pages/landing-comprehensive.tsx
+          sed -i 's|import sarahImage from "@assets/generated_images/Nigerian_community_relations_headshot_1fca20ac.png";|const sarahImage = "'"$PLACEHOLDER_IMAGE_DATA"'";|g' src/pages/landing-comprehensive.tsx
+          echo "✅ Fixed root landing-comprehensive.tsx"
+        fi
         
         # Create all missing assets with placeholders
         all_assets=(
