--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -53,6 +53,36 @@ jobs:
         echo "Installing project dependencies..."
         npm ci --prefer-offline --no-audit --no-fund
     
+    - name: Create index.html if missing
+      run: |
+        echo "Checking for index.html files..."
+        
+        # Check if index.html exists in root or create it
+        if [ ! -f "index.html" ]; then
+          echo "Creating index.html in root directory..."
+          cat > index.html << 'EOF'
+        <!DOCTYPE html>
+        <html lang="en">
+          <head>
+            <meta charset="UTF-8" />
+            <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <title>Step Up Naija</title>
+          </head>
+          <body>
+            <div id="root"></div>
+            <script type="module" src="/src/main.tsx"></script>
+          </body>
+        </html>
+        EOF
+        fi
+        
+        # List available files for debugging
+        echo "Available files in root:"
+        ls -la
+        echo "Available files in src:"
+        ls -la src/ 2>/dev/null || echo "No src directory"
+    
     - name: Install ImageMagick
       run: |
         sudo apt-get update
@@ -62,27 +92,15 @@ jobs:
       run: |
         echo "Verifying asset files exist and fixing component imports..."
         
-        # Verify critical asset exists
-        if [ -f "attached_assets/generated_images/Nigerian_youth_civic_engagement_scene_024f101a.png" ]; then
-          echo "✅ Critical asset file exists: Nigerian_youth_civic_engagement_scene_024f101a.png"
-        else
-          echo "❌ Critical asset missing - creating placeholder..."
-          mkdir -p attached_assets/generated_images
-          echo "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8/5+hHgAHggJ/PchI7wAAAABJRU5ErkJggg==" | base64 -d > "attached_assets/generated_images/Nigerian_youth_civic_engagement_scene_024f101a.png"
-        fi
+        # Create attached_assets directory and placeholder
+        mkdir -p attached_assets/generated_images
+        echo "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8/5+hHgAHggJ/PchI7wAAAABJRU5ErkJggg==" | base64 -d > "attached_assets/generated_images/Nigerian_youth_civic_engagement_scene_024f101a.png"
         
-        # Fix component import issues
+        # Fix component import issues if files exist
         if [ -f "src/pages/community-chat.tsx" ]; then
           sed -i 's/RealtimeNotifications/RealTimeNotifications/g' src/pages/community-chat.tsx
           sed -i 's/@\/components\/RealtimeNotifications/@\/components\/RealTimeNotifications/g' src/pages/community-chat.tsx
           echo "✅ Fixed community-chat.tsx imports"
-        fi
-        
-        # Fix client-side imports
-        if [ -f "client/src/pages/community-chat.tsx" ]; then
-          sed -i 's/RealtimeNotifications/RealTimeNotifications/g' client/src/pages/community-chat.tsx
-          sed -i 's/@\/components\/RealtimeNotifications/@\/components\/RealTimeNotifications/g' client/src/pages/community-chat.tsx
-          echo "✅ Fixed client community-chat.tsx imports"
         fi
         
         echo "✅ Asset verification and import fixes complete!"
@@ -90,23 +108,37 @@ jobs:
     - name: Build web app
       run: |
         echo "Building web app..."
-        npx vite build --config vite.config.mobile.ts
+        # Try to build with mobile config, fallback to regular vite build
+        if [ -f "vite.config.mobile.ts" ]; then
+          npx vite build --config vite.config.mobile.ts
+        else
+          npx vite build
+        fi
         
-        # Move build files to correct location for Capacitor
-        if [ -d "dist/public" ]; then
-          rm -rf build 2>/dev/null || true
-          mv dist/public build
-        elif [ -d "dist" ]; then
+        # Create build directory from dist
+        if [ -d "dist" ]; then
           rm -rf build 2>/dev/null || true
           mv dist build
         fi
         
-        # Ensure Capacitor can find web assets
-        mkdir -p dist
-        cp -r build dist/public
+        echo "Build completed. Contents:"
+        ls -la build/ 2>/dev/null || echo "No build directory found"
     
     - name: Install Capacitor CLI
       run: npm install -g @capacitor/cli@latest
+    
+    - name: Initialize Capacitor
+      run: |
+        # Initialize Capacitor if not already done
+        if [ ! -f "capacitor.config.ts" ] && [ ! -f "capacitor.config.json" ]; then
+          npx cap init "Step Up Naija" "com.stepup.naija" --web-dir="build"
+        fi
+        
+        # Copy web assets
+        mkdir -p www
+        if [ -d "build" ]; then
+          cp -r build/* www/
+        fi
     
     - name: Add Android platform
       run: |
