--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -45,7 +45,6 @@ jobs:
       run: |
         echo "Installing project dependencies with network resilience..."
         
-        # Function to install with retries
         install_with_retry() {
           for i in {1..5}; do
             echo "Attempt $i/5: Installing dependencies..."
@@ -59,7 +58,6 @@ jobs:
           done
           
           echo "All attempts failed, trying with different approach..."
-          # Fallback: try regular install
           npm install --prefer-offline --no-audit --no-fund --maxsockets=1
         }
         
@@ -146,7 +144,6 @@ jobs:
     
     - name: Install Capacitor CLI with retry
       run: |
-        # Install Capacitor CLI with retries
         for i in {1..3}; do
           echo "Attempt $i/3: Installing Capacitor CLI..."
           if npm install -g @capacitor/cli@latest --maxsockets=1; then
@@ -202,18 +199,23 @@ jobs:
         if [ -f "app/build.gradle" ]; then
           echo "Fixing app/build.gradle for Java 17..."
           
+          # Update existing JavaVersion references
           sed -i 's/JavaVersion.VERSION_.*/JavaVersion.VERSION_17/' app/build.gradle
           sed -i 's/jvmTarget = ".*"/jvmTarget = "17"/' app/build.gradle
           sed -i 's/jvmTarget = .*/jvmTarget = "17"/' app/build.gradle
           
+          # Add compileOptions inside android block if not present
           if ! grep -q "compileOptions" app/build.gradle; then
-            cat >> app/build.gradle << 'EOF'
-
-            compileOptions {
-                sourceCompatibility JavaVersion.VERSION_17
-                targetCompatibility JavaVersion.VERSION_17
-            }
-        EOF
+            echo "Adding compileOptions to android block..."
+            # Find the android block and add compileOptions before the closing brace
+            sed -i '/android {/,/^}/ {
+              /^}/ i\
+            \
+                compileOptions {\
+                    sourceCompatibility JavaVersion.VERSION_17\
+                    targetCompatibility JavaVersion.VERSION_17\
+                }
+            }' app/build.gradle
           fi
         fi
         
@@ -228,6 +230,9 @@ jobs:
         java -version
         echo "ACTUAL_JAVA_HOME: $ACTUAL_JAVA_HOME"
         echo "System JAVA_HOME: $JAVA_HOME"
+        
+        echo "Checking build.gradle syntax:"
+        cat app/build.gradle | grep -A 10 -B 10 "compileOptions" || echo "No compileOptions found"
     
     - name: Build Android APK
       run: |
